--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../static/css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
               integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
         <title>{{ title }}</title>
     </head>
     <body>
         <h4>Наше приложение</h4>
         <!-- Begin page content -->
         <main role="main" class="container">
-            {% block train %}{% endblock %}
+            {% block content %}{% endblock %}
         </main>
     </body>
 </html>
