--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,14 @@
     </head>
     <body>
         <h4>Наше приложение</h4>
+        {% if current_user.is_authenticated %}
+            <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+        {% else %}
+            <p>
+                <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                <a class="btn btn-success" href="/login">Войти</a>
+            </p>
+        {% endif %}
         <!-- Begin page content -->
         <main role="main" class="container">
             {% block content %}{% endblock %}
